--- a/daily-logs/18-May-2025.md
+++ b/daily-logs/18-May-2025.md
@@ -1,1 +1,16 @@
+## 📆 Daily Log — 18 May 2025
 
+🎯 **Focus**: Planning the next phase after completing Seaborn Data Visualization
+
+### ✅ Suggested Plan
+
+| Week | Focus |
+|------|-------|
+| 🗓️ Week 3 of May (Now) | Finish: *Statistics in Python* (current module) |
+| 🗓️ Week 4 of May | Do: *Data Analysis in Python* + Recap SQL & Power BI |
+| 🗓️ Week 1 of June | Start first **mini-project** (e.g., Spotify/COVID-19/ASNB data) |
+| 🗓️ Week 2 of June | Polish project + publish on GitHub + Share on LinkedIn |
+
+> ✨ By finishing the Python track first, I’ll be able to interpret trends, apply statistical reasoning, and write better project insights.
+
+🔗 [GitHub Notes Folder](https://github.com/sabrinaMKE201073/DSroadmap2025/tree/main/notes/data_visualization)
