--- a/daily-logs/18-May-2025.md
+++ b/daily-logs/18-May-2025.md
@@ -2,15 +2,34 @@
 
 🎯 **Focus**: Planning the next phase after completing Seaborn Data Visualization
 
-### ✅ Suggested Plan
+# 📊 Sabrina's Python Data Associate Prep Tracker
 
-| Week | Focus |
-|------|-------|
-| 🗓️ Week 3 of May (Now) | Finish: *Statistics in Python* (current module) |
-| 🗓️ Week 4 of May | Do: *Data Analysis in Python* + Recap SQL & Power BI |
-| 🗓️ Week 1 of June | Start first **mini-project** (e.g., Spotify/COVID-19/ASNB data) |
-| 🗓️ Week 2 of June | Polish project + publish on GitHub + Share on LinkedIn |
+Track my progress toward becoming job-ready for BI/Data Analyst roles and passing the Python Data Associate certification first.
 
-> ✨ By finishing the Python track first, I’ll be able to interpret trends, apply statistical reasoning, and write better project insights.
+---
 
-🔗 [GitHub Notes Folder](https://github.com/sabrinaMKE201073/DSroadmap2025/tree/main/notes)
+## ✅ Completed
+- [x] Introduction to Python  
+- [x] Intermediate Python  
+- [x] Data Manipulation with pandas  
+- [x] Joining Data with pandas  
+- [x] Introduction to SQL  
+- [x] Intermediate SQL  
+- [x] Introduction to Data Visualization with Seaborn  
+
+---
+
+## 🔄 In Progress
+- [ ] EDA in Python (Target today: Module 1–2 done)
+
+---
+
+## 🔜 To Do (Start Here)
+- [ ] Cleaning Data in Python  
+- [ ] Introduction to Functions in Python  
+- [ ] Introduction to Statistics in Python
+
+---
+
+## 🎯 Goal
+Be job-ready for BI/Data Analyst roles and pass the Python Data Associate Certification by **May 31, 2025**.
