Update and rename 18-May-2025.md to 2025-05-18.md

--- a/daily-logs/2025-05-18.md
+++ b/daily-logs/2025-05-18.md
@@ -1,10 +1,8 @@
 ## 📆 Daily Log — 18 May 2025
 
-🎯 **Focus**: Planning the next phase after completing Seaborn Data Visualization
+### 📊 Sabrina's Python Data Associate Prep Tracker
 
-# 📊 Sabrina's Python Data Associate Prep Tracker
-
-Track my progress toward becoming job-ready for BI/Data Analyst roles and passing the Python Data Associate certification first.
+> Track my progress toward becoming job-ready for BI/Data Analyst roles and passing the Python Data Associate certification first.
 
 ---
 
