Adding part 2 of Introduction of function to Python

--- a/notes/Intro_Functions_in_Python/P2_intro_to_function_in_python.ipynb
+++ b/notes/Intro_Functions_in_Python/P2_intro_to_function_in_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnrw6XRg3U4VHEtjBurP7N",
+      "authorship_tag": "ABX9TyNn+otRaWnCuLZqlt1qCHQ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "0WpOKoQ-0Bc_",
+        "outputId": "67d32e0f-5948-4642-984f-5dcf4538f2c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "503024da-b580-4a95-dd1c-327d0636a5ec"
+        }
       },
       "outputs": [
         {
@@ -74,6 +74,440 @@
         "\n",
         "# Call function echo_shout() with argument 'hello'\n",
         "echo_shout('hello')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 30/5 - Default and flexible arguments"
+      ],
+      "metadata": {
+        "id": "rQFczkL5wDbw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def power (number, pow=1):\n",
+        "  \"\"\"Raise number to the power of pow.\"\"\"\n",
+        "\n",
+        "  new_value = number ** pow\n",
+        "  return new_value"
+      ],
+      "metadata": {
+        "id": "vZDpfMfuwKzP"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "power(9,2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MHKPwXx8wo-l",
+        "outputId": "a5e18c86-2e62-46a6-a140-3dc3df04943c"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "81"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "power(9,1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WKHQkUuNwoxD",
+        "outputId": "d135f1f0-5536-4116-ff34-edf63511e710"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "power(9)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kTDwNfi9wt3N",
+        "outputId": "7337aa14-bafb-4d26-e77c-98b031e2d06a"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add_all(*args):\n",
+        "  \"\"\"Sum all values in *args together.\"\"\"\n",
+        "\n",
+        "  # Initialize sum\n",
+        "  sum_all = 0\n",
+        "\n",
+        "  # Accumulate the sum\n",
+        "  for num in args:\n",
+        "    sum_all += num\n",
+        "\n",
+        "  return sum_all"
+      ],
+      "metadata": {
+        "id": "qX0P3KoLvNiu"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(add_all(1))\n",
+        "print(add_all(1,2))\n",
+        "print(add_all(5,10,15,20))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HpO1bTzfxQIt",
+        "outputId": "8549fa0a-fa23-47e6-d0ef-c0e52e1526f5"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To print out the key-value pairs using this define function:\n",
+        "- print_all(**kwargs)"
+      ],
+      "metadata": {
+        "id": "kq5E8tsazO5-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_all(**kwargs):\n",
+        "  \"\"\"Print out key-value pairs in **kwargs.'\"\"\"\n",
+        "\n",
+        "  # Print out the key-value pairs\n",
+        "  for key, value in kwargs.items():\n",
+        "    print(key + \": \" + value)"
+      ],
+      "metadata": {
+        "id": "sHxBYN2RyLMF"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_all(name=\"dumbledore\", job=\"headmaster\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tM9qR659yeyY",
+        "outputId": "d4cd1a5b-bc83-4713-82e4-fd8f7d230691"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "name: dumbledore\n",
+            "job: headmaster\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Functions with one default argument"
+      ],
+      "metadata": {
+        "id": "98--RS781jPZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define shout_echo\n",
+        "def shout_echo(word1, echo=1):\n",
+        "    \"\"\"Concatenate echo copies of word1 and three\n",
+        "     exclamation marks at the end of the string.\"\"\"\n",
+        "\n",
+        "    # Concatenate echo copies of word1 using *: echo_word\n",
+        "    echo_word = word1*echo\n",
+        "\n",
+        "    # Concatenate '!!!' to echo_word: shout_word\n",
+        "    shout_word = echo_word + '!!!'\n",
+        "\n",
+        "    # Return shout_word\n",
+        "    return shout_word\n",
+        "\n",
+        "# Call shout_echo() with \"Hey\": no_echo\n",
+        "no_echo = shout_echo(\"Hey\")\n",
+        "\n",
+        "# Call shout_echo() with \"Hey\" and echo=5: with_echo\n",
+        "with_echo = shout_echo(\"Hey\", echo= 5)\n",
+        "\n",
+        "# Print no_echo and with_echo\n",
+        "print(no_echo)\n",
+        "print(with_echo)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ydWP-fh3yz_m",
+        "outputId": "c90a1607-3386-471e-9ca9-dbc977c0317e"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hey!!!\n",
+            "HeyHeyHeyHeyHey!!!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Functions with multiple default arguments"
+      ],
+      "metadata": {
+        "id": "DNEeCuHE1p7U"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define shout_echo\n",
+        "def shout_echo(word1, echo=1, intense=False):\n",
+        "    \"\"\"Concatenate echo copies of word1 and three\n",
+        "    exclamation marks at the end of the string.\"\"\"\n",
+        "\n",
+        "    # Concatenate echo copies of word1 using *: echo_word\n",
+        "    echo_word = word1 * echo\n",
+        "\n",
+        "    # Make echo_word uppercase if intense is True\n",
+        "    if intense is True:\n",
+        "        # Make uppercase and concatenate '!!!': echo_word_new\n",
+        "        echo_word_new = echo_word.upper() + '!!!'\n",
+        "    else:\n",
+        "        # Concatenate '!!!' to echo_word: echo_word_new\n",
+        "        echo_word_new = echo_word + '!!!'\n",
+        "\n",
+        "    # Return echo_word_new\n",
+        "    return echo_word_new\n",
+        "\n",
+        "# Call shout_echo() with \"Hey\", echo=5 and intense=True: with_big_echo\n",
+        "with_big_echo = shout_echo(\"Hey\", echo= 5, intense=True)\n",
+        "\n",
+        "# Call shout_echo() with \"Hey\" and intense=True: big_no_echo\n",
+        "big_no_echo = shout_echo(\"Hey\", intense=True)\n",
+        "\n",
+        "# Print values\n",
+        "print(with_big_echo)\n",
+        "print(big_no_echo)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6QfTufX5yzjY",
+        "outputId": "5d4384be-e240-4822-de27-da2a7ea51c52"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HEYHEYHEYHEYHEY!!!\n",
+            "HEY!!!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Functions with variable-length arguments (*args)"
+      ],
+      "metadata": {
+        "id": "CxxRrrI_3zzl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define gibberish\n",
+        "def gibberish(*args):\n",
+        "    \"\"\"Concatenate strings in *args together.\"\"\"\n",
+        "\n",
+        "    # Initialize an empty string: hodgepodge\n",
+        "    hodgepodge = \"\"\n",
+        "\n",
+        "    # Concatenate the strings in args\n",
+        "    for word in args:\n",
+        "        hodgepodge += word\n",
+        "\n",
+        "    # Return hodgepodge\n",
+        "    return hodgepodge\n",
+        "\n",
+        "# Call gibberish() with one string: one_word\n",
+        "one_word = gibberish(\"luke\")\n",
+        "\n",
+        "# Call gibberish() with five strings: many_words\n",
+        "many_words = gibberish(\"luke\", \"leia\", \"han\", \"obi\", \"darth\")\n",
+        "\n",
+        "# Print one_word and many_words\n",
+        "print(one_word)\n",
+        "print(many_words)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XGof4R1f3yWQ",
+        "outputId": "07a835e9-6ead-4c83-f061-43fe3b5d5f7c"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "luke\n",
+            "lukeleiahanobidarth\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Functions with variable-length keyword arguments (**kwargs)"
+      ],
+      "metadata": {
+        "id": "aIZiyo6K5gh2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define report_status\n",
+        "def report_status(**kwargs):\n",
+        "    \"\"\"Print out the status of a movie character.\"\"\"\n",
+        "\n",
+        "    print(\"\\nBEGIN: REPORT\\n\")\n",
+        "\n",
+        "    # Iterate over the key-value pairs of kwargs\n",
+        "    for key, value in kwargs.items():\n",
+        "        # Print out the keys and values, separated by a colon ':'\n",
+        "        print(key + \": \" + value)\n",
+        "\n",
+        "    print(\"\\nEND REPORT\")\n",
+        "\n",
+        "# First call to report_status()\n",
+        "report_status(name=\"luke\", affiliation=\"jedi\", status=\"missing\")\n",
+        "\n",
+        "# Second call to report_status()\n",
+        "report_status(name=\"anakin\", affiliation=\"sith lord\", status=\"deceased\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Eb0t6bba3_4G",
+        "outputId": "1ecf6f98-5b8b-4cc2-b434-090658500533"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "BEGIN: REPORT\n",
+            "\n",
+            "name: luke\n",
+            "affiliation: jedi\n",
+            "status: missing\n",
+            "\n",
+            "END REPORT\n",
+            "\n",
+            "BEGIN: REPORT\n",
+            "\n",
+            "name: anakin\n",
+            "affiliation: sith lord\n",
+            "status: deceased\n",
+            "\n",
+            "END REPORT\n"
+          ]
+        }
       ]
     }
   ]
